# dsr-mini-competition

./: Earthquake_HG.ipynb  README.md  pyproject.toml  stats.json
.viz/: stats.json
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py
mini-competition/: README.md
mini-competition/conf/: logging.yml
mini-competition/docs/source/: index.rst
mini-competition/src/mini_competition/: __init__.py
mini-competition/tests/: test_run.py
notebooks/: Untitled.ipynb  sample_train.csv
src/dsr_mini_competition/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/dsr_mini_competition/pipelines/data_processing/: nodes.py  pipeline.py
src/dsr_mini_competition/pipelines/data_science/: nodes.py  pipeline.py
src/dsr_mini_competition/pipelines/submission/: nodes.py  pipeline.py
src/mini_competition/: __main__.py
tests/pipelines/data_science/: test_pipeline.py
