[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "dsr_mini_competition"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
dsr-mini-competition = "dsr_mini_competition.__main__:main"

[tool.kedro]
package_name = "dsr_mini_competition"
project_name = "dsr-mini-competition"
kedro_init_version = "0.19.8"
tools = [ "Linting", "Data Structure",]
example_pipeline = "True"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "dsr_mini_competition.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "5060c9fd24e746eeb69965a60a7b0108"
